# ChangeLog for x11-misc/gaia
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/gaia/Attic/ChangeLog,v 1.13 2006/12/06 11:51:22 opfer Exp $

  06 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  -files/gaia-0.1.1-correct_doxygen_path.patch,
  -files/gaia-0.1.1-font_inclusion.patch, -gaia-0.1.1.ebuild:
  clean up old version

*gaia-0.1.2 (06 Dec 2006)

  06 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  +files/gaia-0.1.2-font_inclusion.patch,
  +files/gaia-0.1.2-remove_dep_checks_gaia.patch,
  +files/gaia-0.1.2-remove_dep_checks_wwfetch.patch, +gaia-0.1.2.ebuild:
  version bump; only fixes in the build system. Added patches to avoid
  dependency checks of the program itself. Maybe helps people to link with
  --as-needed

  05 Dec 2006; Christian Faulhammer <opfer@gentoo.org> gaia-0.1.1.ebuild:
  Let install phase respect custom CFLAGS too

  04 Dec 2006; Christian Faulhammer <opfer@gentoo.org> gaia-0.1.1.ebuild:
  remove non-x86 keywords and removed s from Homepage URL

*gaia-0.1.1 (04 Dec 2006)

  04 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  +files/gaia-0.1.1-correct_doxygen_path.patch,
  +files/gaia-0.1.1-font_inclusion.patch, +metadata.xml, +gaia-0.1.1.ebuild:
  a new try. This version uses NASA World Wind instead of Google Earth and
  should be safe from copyright violations
